# req1

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
crates/req1-cli/: Cargo.toml
crates/req1-core/: Cargo.toml
crates/req1-core/src/: auth.rs  baseline.rs  error.rs  fingerprint.rs  history.rs  level.rs  lib.rs  suspect.rs  validation.rs
crates/req1-core/src/reqif/: export.rs  import.rs  mod.rs  type_map.rs
crates/req1-core/src/scripting/: bootstrap.js  engine.rs
crates/req1-core/src/service/: app_user.rs  attachment.rs  audit.rs  auth.rs  baseline.rs  baseline_set.rs  change_proposal.rs  comment.rs  crud.rs  csv_import.rs  dashboard.rs  diagram.rs  docx_import.rs  e_signature.rs  lifecycle.rs  link.rs  mention.rs  mod.rs  module.rs  notification.rs  object.rs  object_type.rs  project.rs  project_template.rs  publish.rs  review_assignment.rs  review_comment.rs  review_package.rs  scheduler.rs  test.rs  validation_service.rs  view.rs  webhook.rs  workspace.rs  xlsx_import.rs
crates/req1-reqif/: Cargo.toml
crates/req1-reqif/src/: archive.rs  deserialize.rs  error.rs  lib.rs  serialize.rs
crates/req1-reqif/src/model/: common.rs  datatypes.rs  header.rs  mod.rs  spec_hierarchy.rs  spec_objects.rs  spec_relations.rs  spec_types.rs
crates/req1-reqif/tests/: archive.rs  builder.rs  roundtrip.rs
crates/req1-reqif/tests/fixtures/: all_types.reqif  minimal.reqif
crates/req1-server/: Cargo.toml
crates/req1-server/examples/: openapi_spec.rs
crates/req1-server/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  openapi.rs  scheduler.rs  state.rs
crates/req1-server/src/routes/: app_users.rs  attachments.rs  attribute_definitions.rs  audit.rs  auth.rs  baseline_sets.rs  baselines.rs  change_proposals.rs  comments.rs  dashboards.rs  diagrams.rs  e_signatures.rs  health.rs  impact.rs  lifecycle.rs  links.rs  mod.rs  modules.rs  notifications.rs  object_types.rs  objects.rs  project_templates.rs  projects.rs  publish.rs  reqif.rs  review_assignments.rs  review_comments.rs  review_packages.rs  scripts.rs  tests.rs  traceability.rs  validation.rs  views.rs  webhooks.rs  workspaces.rs
crates/req1-server/tests/: api_integration.rs  integration.rs
crates/req1-server/tests/integration/: attributes.rs  baselines.rs  common.rs  dashboards.rs  docx_import.rs  health.rs  impact.rs  links.rs  modules.rs  objects.rs  publish.rs  reviews.rs  scripts.rs  templates.rs  users.rs  workspaces.rs
docs/: README.md
docs/arch/: 00-table-of-contents.md  01-introduction-and-goals.md  02-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  09-architecture-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md
docs/spec/: README.md  certification-support.md  functional.md
entity/: Cargo.toml
entity/src/: app_user.rs  attachment.rs  attribute_definition.rs  audit_log.rs  baseline.rs  baseline_entry.rs  baseline_set.rs  change_proposal.rs  comment.rs  dashboard.rs  dashboard_widget.rs  diagram.rs  e_signature.rs  lib.rs  lifecycle_model.rs  link.rs  link_type.rs  module.rs  module_permission.rs  notification.rs  object.rs  object_history.rs  object_type.rs  project.rs  project_template.rs  review_assignment.rs  review_comment.rs  review_package.rs  script.rs  script_execution.rs  test_case.rs  test_execution.rs  view.rs  webhook.rs  workspace.rs  workspace_member.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: api-admin.spec.ts  app.spec.ts  attributes-types-views.spec.ts  auth.spec.ts  helpers.ts  layout-navigation.spec.ts  lifecycle-tests-diagrams.spec.ts  links-baselines.spec.ts  module.spec.ts  object.spec.ts  panels-activity.spec.ts  publish-editor.spec.ts  reviews-proposals.spec.ts  scripts-validation.spec.ts  search-analysis.spec.ts  workspace-project.spec.ts
frontend/src/: ActivityFeed.tsx  App.tsx  AttachmentPanel.tsx  AttributeDefPanel.tsx  AuthContext.tsx  BaselinePanel.tsx  ChangeProposalPanel.tsx  CommentPanel.tsx  CoverageWidget.tsx  DashboardListPage.tsx  DashboardPage.tsx  DashboardWidget.tsx  DiagramPanel.tsx  DiffView.tsx  DocBlock.tsx  DocOutline.tsx  DocxImportWizard.tsx  ESignatureModal.tsx  FormLayoutEditor.tsx  GlobalSearch.tsx  ImpactGraph.tsx  ImpactPanel.tsx  LifecyclePanel.tsx  LinkPanel.tsx  LiveDocPanel.tsx  LoginPage.tsx  MentionTextarea.tsx  ModuleDetail.tsx  ModuleSettings.tsx  NotificationBell.tsx  ObjectDetailPanel.tsx  ObjectHistory.tsx  ObjectTree.tsx  (+20 more)
migration/: Cargo.toml
(+51 files in other folders)
