[workspace]
resolver = "3"
members = [
    "crates/req1-server",
    "crates/req1-core",
    "crates/req1-reqif",
    "crates/req1-cli",
    "migration",
    "entity",
]

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
sha2 = "0.10"
deno_core = "0.336"
deno_error = "0.5"
minijinja = { version = "2", features = ["loader"] }
pulldown-cmark = "0.12"
clap = { version = "4", features = ["derive"] }
