[package]
name = "req1-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
mlua = { workspace = true }
tracing = { workspace = true }
minijinja = { workspace = true }
pulldown-cmark = { workspace = true }
entity = { path = "../../entity" }
