[package]
name = "req1-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
minijinja = { workspace = true }
pulldown-cmark = { workspace = true }
reqwest = { workspace = true }
entity = { path = "../../entity" }
csv = { workspace = true }
serde_yaml = { workspace = true }
rust_xlsxwriter = { workspace = true }
calamine = { workspace = true }
regex = { workspace = true }
req1-reqif = { path = "../req1-reqif" }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
cron = { workspace = true }
docx-rs = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
utoipa = { workspace = true }
