[package]
name = "req1-reqif"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
pretty_assertions = "1"
