[package]
name = "req1-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = "1"
sea-orm-migration = { workspace = true }

req1-core = { path = "../req1-core" }
entity = { path = "../../entity" }
migration = { path = "../../migration" }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
